--- a/style.css
+++ b/style.css
@@ -143,7 +143,6 @@ body{
     width: 100%;
     height: 28%;
     position: absolute;
-    padding-bottom: 15px;
 }
 #headerPic{
     height:100%;
@@ -259,6 +258,7 @@ body{
     border-bottom:1px solid #282828;
     display: flex;
     align-items: center;
+    padding-top:15px;
 }
 #titleHeader{
     color:#b3b3b3;
